# score2ubtrace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: nightly-ubtrace.yml
patches/: docs-as-code-v4.0.3-requirements.in.patch  score-main-conf.py.patch
scripts/: list-refs.sh
