[project]
name = "score-ubtrace-builder"
version = "0.0.0"
description = "Build environment for publishing eclipse-score/score docs to ubtrace.team.useblocks.com"
requires-python = "==3.12.*"
dependencies = [
  # Mirrors eclipse-score/docs-as-code@v4.0.3 src/requirements.in (runtime
  # subset only - dev tooling like pytest/basedpyright/sphinx-autobuild/debugpy
  # is not needed for a non-interactive ubtrace build).
  "Sphinx>=9.0",
  "sphinx-needs[plotting]==8.0.0",
  "sphinx-collections>=0.3.1",
  "sphinxcontrib-plantuml",
  "sphinxcontrib.mermaid",
  "pydata-sphinx-theme",
  "sphinx-design",
  "ruamel.yaml",
  "myst-parser",
  "PyGithub",
  "esbonio<1",
  "rich",
  "needs-config-writer==0.2.4",
  "bazel-runfiles",
  # The ubtrace Sphinx builder lives on the useblocks index - see sources.
  "ubt-sphinx",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "ub-pypi"
url = "https://pypi.useblocks.com/"
explicit = true

[tool.uv.sources]
ubt-sphinx = { index = "ub-pypi" }
